webapp/static/styles.css
#texts {
  border: 2px solid;
  position: fixed;
  right: 10px;
  top: 10px;
  padding: 10px;
  margin: 5px;
  width: 70vw;

}

#selection {
  position: static;
  padding: 10px;
  left: 10px;
  top: 10px;
  margin: 5px;
}

#info {
  position: static;
  padding: 10px;
  margin: 5px;
  left: 10px;
}

.prompt {
  margin-top: 2.5px;
  margin-bottom: 1px;
}

#cluster-submit {
  margin-top: 2.5px;
}

